# shared/src/commonMain/kotlin/org/sportsradar/sportsradarapp/shared/auth/data/UserLoginResponse.kt
@@ -1,0 +1,9 @@
+package org.sportsradar.sportsradarapp.shared.auth.data
+
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class UserLoginResponse(
+    val tokens: TokenData,
+    val user: UserData,
+)
